# Affinity

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
affinity/: __init__.py  affinity.py  models.py  urls.py
src/affinity/: __init__.py  _affinity.py
