[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "affinity"
version = "0.0.2"
authors = [
  { name="Eytan Ohana", email="eohana98@gmail.com" },
]
description = "A simple python sdk for the affinity platform's api."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/eytanohana/Affinity"
"Bug Tracker" = "https://github.com/eytanohana/Affinity/issues"
